--- a/home.html
+++ b/home.html
@@ -28,6 +28,7 @@
             <input type="checkbox">
 	    <p class="agree700">I Agree Terms and Condition</p>
             <p class="agree5">I Agree Terms and Condition</p>
+	    <p class="agree587">I Agree Terms and Condition</p>
             <input type="submit" value="Signup">
         </div> 
     </div>
