--- a/home.html
+++ b/home.html
@@ -26,6 +26,7 @@
             <img src="C:\Users\Aayush\Desktop\HTML\SIGN UP/phone.png" alt="PHONE NUMBER">
             <input type="text" placeholder="Phone number">
             <input type="checkbox">
+	    <p class="agree7001">I Agree Terms and Condition</p>
 	    <p class="agree700">I Agree Terms and Condition</p>
             <p class="agree5">I Agree Terms and Condition</p>
 	    <p class="agree587">I Agree Terms and Condition</p>
