--- a/home.html
+++ b/home.html
@@ -26,8 +26,11 @@
             <img src="C:\Users\Aayush\Desktop\HTML\SIGN UP/phone.png" alt="PHONE NUMBER">
             <input type="text" placeholder="Phone number">
             <input type="checkbox">
+	    <p class="agree7001">I Agree Terms and Condition</p>
+ 	    <p class="agree7002">I Agree Terms and Condition</p>
 	    <p class="agree700">I Agree Terms and Condition</p>
             <p class="agree5">I Agree Terms and Condition</p>
+	    <p class="agree587">I Agree Terms and Condition</p>
             <input type="submit" value="Signup">
         </div> 
     </div>
