Updated pwd form1.html

--- a/form1.html
+++ b/form1.html
@@ -76,7 +76,7 @@ _webkit-border-radius:5px;
     <tr>
 <td>Password:</td>
   <td>
-<input type="password" name="user-pass "><br>
+<input type="password" name="user-pass111 "><br>
 </td>
     </tr>
 
