--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>SIGNUP </title>
+	<title>SIGNUP page </title>
     <meta charset="UTF-8">
     <title>SIGN UP FORM</title>
     <link rel="stylesheet" href="style.css">
