--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
 	<title>SIGNUP page </title>
     <meta charset="UTF-8">
-    <title>SIGN UP FORM</title>
+    <title>SIGN UP FORM 1</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
